fixed overflow left panel

--- a/scss/_content-window.scss
+++ b/scss/_content-window.scss
@@ -32,3 +32,17 @@
     }
   }  
 }
+
+::-webkit-scrollbar {
+	width: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+	min-height: 45px;
+	box-shadow: inset 0 0 0 20px #ccd5e4;
+	border-left: 7px solid transparent;
+	border-right: 7px solid transparent;
+	border-top: 3px solid transparent;
+	border-bottom: 3px solid transparent;
+	border-radius: 9px;
+}
