--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,7 +8,7 @@
 }
 
 .Book-Store {
-  height: 1053px;
+  height: 100%;
   width: fit-content;
   margin: auto;
   font-family: Proxima Nova;
@@ -24,7 +24,7 @@
 
 .app {  
   flex: 1;
-  height: 900px;
+  height: 100%;
   @media screen and (min-width: 1389px) {
     width: 1320px;
   }
@@ -32,13 +32,14 @@
   @import 'scss/app-header';
 
   .app-body {
-    @include justify-align(flex-start); 
-    
+    @include justify-align(flex-start);
+    height: calc(100% - 90px);
+
     @import 'scss/left-sidebar';
     
     .app-main {
       flex: 1;
-      height: 900px;
+      height: 100%;
 
       .top-panel {
         flex: 1;
